--- a/src/styles/StyleSheetExtraLargeDevices.css
+++ b/src/styles/StyleSheetExtraLargeDevices.css
@@ -27,6 +27,7 @@
        --TextoAgregarTermino: ' Término';
        --DireccionFlexSeccionContenidoHome: row;
        --AnchoSeccionFiltros:32%;
+       --DireccionFlexFiltros: column;
        --OrientacionBusqueda: row;
    }
 
