--- a/src/styles/StyleSheetExtraLargeDevices.css
+++ b/src/styles/StyleSheetExtraLargeDevices.css
@@ -25,6 +25,8 @@
        --TextoExpandir:' Expandir';
        --TextoContraer:' Contraer';
        --TextoAgregarTermino: ' Término';
+        /*Seccion Resultados Busqueda*/
+     --DireccionSeccionesFiltros:row;
    }
 }
 
