--- a/src/styles/StyleSheetExtraLargeDevices.css
+++ b/src/styles/StyleSheetExtraLargeDevices.css
@@ -15,6 +15,8 @@
        /* Seccion Izquierda y Derecha */
         --SeccionIzquierdaWidth: 60%;
         --SeccionDerechaDisplay: flex;
+        /* Pagina Home*/
+        --DireccionFlexSeccionContenidoPaginaInicio:row;
        /* Subpaginas*/
         --FiltrosBusquedaOscultar: block;
        /* Seccion Términos */
