--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -839,6 +839,11 @@
     display: flex;
     align-items: center;
 }
+.EnlaceFuente {
+    color: var(--ColorAcento) !important;
+    font-size: var(--TamanoFuenteParrafos);
+}
+
 /* Editar Terminos */
 
 .BotonGuardarFixed{
