--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -290,6 +290,10 @@
      padding-left:10px;
      filter: brightness(100);
 }
+.IntruccionesAplicativo{
+    font-size: calc(var(--TamanoFuenteParrafos) - 2px);
+     margin-top:20%;
+}
  .InformacionPropiedadAplicativo{
      font-size: calc(var(--TamanoFuenteParrafos) - 2px);
      margin-top:20%;
