--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -294,6 +294,7 @@
     font-size: calc(var(--TamanoFuenteParrafos) - 3px);
      margin-top:20%;
      line-height: 1.1em;
+     text-align: justify;
 }
  .InformacionPropiedadAplicativo{
      font-size: calc(var(--TamanoFuenteParrafos) - 2px);
